# ymir

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
examples/: CMakeLists.txt
examples/dijkstra_map/: CMakeLists.txt  main.cpp
examples/dijkstra_map/maps/: empty_map.txt  map_with_pillars.txt  multiple_rooms.txt  multiple_rooms_unreachable.txt  two_rooms.txt
examples/dungeon_builder_pass/: CMakeLists.txt  main.cpp
examples/dungeon_builder_pass/configs/: cave_dungeon.cfg  complex_dungeon.cfg  random_dungeon.cfg  rect_dungeon.cfg
examples/dungeon_builder_pass/references/: cave_dungeon.txt  complex_dungeon.txt  random_dungeon.txt  rect_dungeon.txt
examples/procedural_caves/: CMakeLists.txt  main.cpp
examples/procedural_dungeon/: CMakeLists.txt  DungeonBuilder.hpp  Room.hpp  main.cpp  ref_80_24_42.txt
examples/simple_caves/: CMakeLists.txt  main.cpp  ref_42.txt
lib/: CMakeLists.txt
lib/include/ymir/: CallularAutomata.hpp  DebugTile.hpp  DungeonBuilder.hpp  Enum.hpp  LayeredMap.hpp  Logging.hpp  Map.hpp  MapFilter.hpp  MapIo.hpp  Noise.hpp  Room.hpp  Terminal.hpp  TypeHelpers.hpp  Types.hpp  Utility.h
lib/include/ymir/Algorithm/: Dijkstra.hpp  DijkstraIo.hpp  LineOfSight.hpp  MapAlgebra.hpp  VectorAlgebra.hpp  VectorAlgebraInternal.hpp
lib/include/ymir/Config/: AnyDict.hpp  Parser.hpp  String.hpp  TypeHelpers.hpp  Types.hpp
lib/include/ymir/Dungeon/: BuilderBase.hpp  BuilderPass.hpp  CaveRoomGenerator.hpp  CelAltMapFiller.hpp  ChestPlacer.hpp  Context.hpp  Door.hpp  FilterPlacer.hpp  Hallway.hpp  LoopPlacer.hpp  MapFiller.hpp  Object.hpp  RandomBuilder.hpp  RandomRoomGenerator.hpp  RectRoomGenerator.hpp  Room.hpp  RoomEntityPlacer.hpp  RoomGenerator.hpp  RoomPlacer.hpp  StartEndPlacer.hpp
lib/src/: Logging.cpp  Map.cpp  MapIo.cpp  Noise.cpp  PerlinNoise.hpp  SimplexNoise.hpp  SimplexPerlinNoise.hpp  Terminal.cpp  TypeHelpers.cpp  Types.cpp  Utility.cpp
lib/src/Algorithm/: DijkstraIo.cpp
lib/src/Config/: AnyDict.cpp  Parser.cpp  String.cpp  TypeHelpers.cpp  Types.cpp
lib/src/Dungeon/: BuilderBase.cpp  BuilderPass.cpp
test/: CMakeLists.txt
test/cpp/: AlgorithmDijkstraTest.cpp  AlgorithmLineOfSightTest.cpp  AlgorithmVectorAlgebraTest.cpp  CMakeLists.txt  ConfigParserTest.cpp  ConfigTypesTest.cpp  DungeonDoorTest.cpp  DungeonRoomTest.cpp  LayeredMapTest.cpp  LoggingTest.cpp  MapTest.cpp  NoiseTest.cpp  StringTest.cpp  TestHelpers.hpp  TypesTest.cpp
test/scripts/: check_output.py
